--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@better-scroll/slide": "^2.4.2",
     "axios": "^0.26.0",
     "core-js": "^3.8.3",
+    "good-storage": "^1.1.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vue3-lazy": "*",
